<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iBuildApp Network Marketplace (alpha)</string>
    <string name="search_hint">Search apps</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="featured">Featured Apps</string>
    <string name="add_business">Add Your Business</string>
    <string name="loading">Loading</string>
    <string name="no_internet">No internet connection available</string>
    <string name="deals">Deals</string>
    <string name="deals_details">View coupons and special offers from business</string>
    <string name="favourites">Favorites</string>
    <string name="or">OR</string>
    <string name="unable_connect">Unable connect to server</string>
    <string name="done">Done</string>
    <string name="add_logo">Add Logo Image</string>
    <string name="about_us">About Us</string>
    <string name="invite">Invite</string>

    <string name="add_new_business_title">Add New Business</string>
    <string name="enter_fb_page">Enter Facebook Page</string>
    <string name="enter_website_url">Enter website URL</string>
    <string name="enter_manually">Enter your own data</string>
    <string name="no_result">No result found</string>
    <string name="no_templates">No templates for categories</string>
    <string name="select_category">Select a category</string>

    <string name="incorrect_fb_page">Incorrect facebook page</string>
    <string name="incorrect_website_url">Incorrect website url</string>

    <string name="email_sharing_subject">iBuildapp Marketplace</string>

    <string name="about_us_description">iBuildapp business directory puts all the businesses and services you use at your fingertips from your salon to your accountant.</string>
    <string name="about_us_description_part2">Organize your life or find what you are looking for.</string>
    <string name="about_us_description_part3">Create your own app with</string>

    <string name="sharing_success">Message has been successfully posted on the wall</string>
    <string name="sharing_error">Message has not been successfully posted on the wall</string>
    <string name="sharing_dublicated">Message has not been successfully posted on the wall cause status was dublicated</string>
    <string name="sharing_label">Sharing</string>
    <string name="sharing_text">Check out this iBuildApp marketplace app</string>

    <string name="sharing_post_facebook">Post</string>
    <string name="sharing_post_twitter">Tweet</string>

    <string name="sharing_sms_title">Select Contacts</string>
    <string name="sharing_sms_success">Sms has been successfully send</string>
    <string name="sharing_sms_error">Sms has not been send</string>
    <string name="dApp">dApp</string>


</resources>
