<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <com.ibuildapp.masterapp.view.SideBarComponent
            android:id="@+id/root_scroller"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <RelativeLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white" android:id="@+id/relative_holder">
            <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:paddingLeft="5dp" android:paddingRight="5dp"
                    android:background="@color/black" android:id="@+id/main_search_holder">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="50dp"
                        android:layout_height="fill_parent" android:gravity="center" android:id="@+id/hamburger_btn">
                    <ImageView
                            android:layout_width="23dp"
                            android:layout_height="23dp"
                            android:src="@drawable/ic_hamburger"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" android:layout_toLeftOf="@+id/search_btn_holder"
                        android:layout_toRightOf="@+id/hamburger_btn" android:gravity="center">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_category"
                            android:singleLine="false" android:textColor="@color/white" android:textSize="18dp"/>
                </LinearLayout>
                <FrameLayout
                        android:orientation="vertical"
                        android:layout_width="60dp"
                        android:layout_height="fill_parent"
                        android:id="@+id/search_btn_holder"
                        android:layout_alignParentRight="true">
                    <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_search" android:layout_gravity="center_vertical|right" android:id="@+id/search_btn"
                            android:layout_marginRight="5dp" android:longClickable="false" android:padding="7dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cancel"
                            android:id="@+id/search_cancel_text" android:layout_gravity="center" android:textColor="@color/white"
                            android:visibility="gone"/>
                </FrameLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" android:layout_toLeftOf="@+id/search_btn_holder"
                        android:id="@+id/search_edittext_holder" android:visibility="gone">
                    <com.ibuildapp.masterapp.view.EditTextHandleBackPressed
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@drawable/white_rounded_rectangle"
                            android:textCursorDrawable="@null"
                            android:id="@+id/search_edittext" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                            android:paddingLeft="5dp" android:paddingRight="5dp" android:singleLine="true"
                            android:hint="@string/search_hint" android:textSize="14dp"
                            android:textColor="@color/black_trans_90" android:textColorHint="@color/black_trans_60"/>
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="1px" android:background="@color/text_grey" android:id="@+id/main_separator"
                    android:layout_below="@+id/main_search_holder">
            </LinearLayout>
            <GridView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/main_categories"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/main_search_holder"/>
            <ImageView
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:id="@+id/blured" android:visibility="gone"/>

            <!--<Button-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="New Button"-->
                    <!--android:id="@+id/button" android:layout_below="@+id/main_separator"/>-->
        </RelativeLayout>

    </com.ibuildapp.masterapp.view.SideBarComponent>

</LinearLayout>

